# serpen

./: .clippy.toml  .codecov.yml  .coderabbit.yaml  .commitlintrc.yaml  .dprint.jsonc  .editorconfig  .env.example  .gitignore  .gitmodules  .insta.yaml  .lefthook.yaml  .mcp.json  .taplo.toml  .typos.toml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  commitlint.config.cjs  cribo.toml  debug_test.rs  package.json  pyproject.toml  release-please-config.json  renovate.json  serpen.toml  sonar-project.properties  test_bundle.py  test_bundle_corrected.py  test_bundle_final.py  test_explicit_debug.py  test_explicit_debug4.py  test_import_filtering.py  test_import_filtering_main.rs  test_module.py  test_our_fixture_final.py  test_output.py  (+7 more)
crates/cribo/: Cargo.toml  build.rs  debug_resolver.py
crates/cribo/benches/: bundling.rs
crates/cribo/src/: ast_rewriter.rs  bundler.rs  code_generator.rs  config.rs  cribo_graph.rs  dependency_graph.rs  dirs.rs  emit.rs  enhanced_graph_builder.rs  graph_builder.rs  hybrid_static_bundler.rs  import_rewriter.rs  lib.rs  main.rs  orchestrator.rs  resolver.rs  semantic_bundler.rs  simple_static_bundler.rs  static_bundler.rs  unused_imports.rs  unused_imports_simple.rs  util.rs
crates/cribo/src/snapshots/: cribo__emit__tests__extract_original_module_name_snapshots.snap  cribo__unused_import_trimmer__tests__analyze_only_mode.snap  cribo__unused_import_trimmer__tests__basic_unused_import_trimming.snap  cribo__unused_import_trimmer__tests__complex_import_scenarios.snap  cribo__unused_import_trimmer__tests__custom_preserve_patterns.snap  cribo__unused_import_trimmer__tests__no_unused_imports.snap  cribo__unused_import_trimmer__tests__partial_import_trimming.snap  cribo__unused_imports__tests__unused_import_detection_snapshots.snap
crates/cribo/src/visitors/: import_discovery.rs  mod.rs
crates/cribo/tests/: integration_tests.rs  stickytape_compatibility_tests.rs  test_alias_transformation.rs  test_ast_rewriting.rs  test_bundling_snapshots.rs  test_circular_dependencies.rs  test_cli_stdout.rs  test_cli_verbose.rs  test_comprehensive_ast_rewrite.rs  test_dependency_graph_comprehensive.rs  test_future_imports.rs  test_python_version_config.rs  test_pythonpath_support.rs  test_regular_import_aliases.rs  test_relative_imports.rs  test_static_bundler.rs  test_static_bundler_advanced.rs  test_static_bundler_imports.rs  test_static_bundler_integration.rs  test_unused_imports_simple.rs  test_virtualenv_support.rs
crates/cribo/tests/fixtures/: mymodule.py  test_working_example.py
crates/cribo/tests/snapshots/: bundled_code@alias_transformation_test.snap  bundled_code@all_variable_handling.snap  bundled_code@ast_rewriting_class_name_collision.snap  bundled_code@ast_rewriting_function_name_collision.snap  bundled_code@ast_rewriting_happy_path.snap  bundled_code@ast_rewriting_regular_import_aliases.snap  bundled_code@ast_rewriting_variable_name_collision.snap  bundled_code@comprehensive_ast_rewrite.snap  bundled_code@fstring_globals_lifting.snap  bundled_code@fstring_module_globals.snap  bundled_code@future_imports_basic.snap  bundled_code@future_imports_multiple.snap  bundled_code@init_reexports.snap  bundled_code@late_future_imports.snap  bundled_code@namespace_simple_test.snap  bundled_code@pydantic_project.snap  bundled_code@pyfail_four_module_cycle.snap  bundled_code@pyfail_package_level_cycles.snap  bundled_code@pyfail_relative_import_cycles.snap  bundled_code@pyfail_three_module_cycle.snap  bundled_code@simple_math.snap  bundled_code@stickytape_circular_reference.snap  bundled_code@stickytape_explicit_relative_import.snap  bundled_code@stickytape_explicit_relative_import_from_parent_package.snap  bundled_code@stickytape_explicit_relative_import_in_init.snap  bundled_code@stickytape_explicit_relative_import_single_dot.snap  bundled_code@stickytape_explicit_relative_import_single_dot_in_init.snap  bundled_code@stickytape_implicit_init_import.snap  bundled_code@stickytape_import_from_as_module.snap  bundled_code@stickytape_import_from_as_value.snap  bundled_code@stickytape_imports_in_imported_modules.snap  bundled_code@stickytape_module_with_triple_quotes.snap  bundled_code@stickytape_script_using_from_to_import_module.snap  bundled_code@stickytape_script_using_from_to_import_multiple_values.snap  bundled_code@stickytape_script_using_module_in_package.snap  bundled_code@stickytape_script_using_stdlib_module_in_package.snap  bundled_code@stickytape_script_with_single_local_from_import.snap  bundled_code@stickytape_script_with_single_local_import.snap  bundled_code@stickytape_script_with_single_local_import_of_package.snap  bundled_code@stickytape_script_with_special_shebang.snap  (+329 more)
crates/serpen/: Cargo.toml
crates/serpen/benches/: bundling.rs
crates/serpen/src/: ast_rewriter.rs  bundler.rs  combine.rs  config.rs  dependency_graph.rs  dirs.rs  emit.rs  lib.rs  main.rs  python_stdlib.rs  resolver.rs  unused_import_trimmer.rs  unused_imports_simple.rs  util.rs
crates/serpen/src/snapshots/: serpen__emit__tests__extract_import_modules_snapshots.snap  (+9 more)
crates/serpen/tests/: integration_tests.rs  stickytape_compatibility_tests.rs  test_alias_transformation.rs  test_ast_rewriting.rs  test_bundling_snapshots.rs  test_circular_dependencies.rs  test_comprehensive_ast_rewrite.rs  test_dependency_graph_comprehensive.rs  test_future_imports.rs  test_python_version_config.rs  test_pythonpath_support.rs  test_regular_import_aliases.rs  test_relative_imports.rs  test_unused_imports_simple.rs  test_virtualenv_support.rs
crates/unparser/: Cargo.toml  LICENSE  README.md
crates/unparser/src/: comment_test.rs  lib.rs  transformer.rs  unparser.rs  utils.rs
crates/unparser/test_files/: ann_assign.py  assign.py  boolop.py  byte_literal.py  class.py  constant_tuple.py  constants.py  f_string.py  for_loop.py  function_def.py  match.py  precedence.py  simple_assigments.py  simple_comprehensions.py  simple_elif_statement.py  simple_if_statement.py  simple_try_except.py  simple_walrus.py  starred.py  type_alias.py
(+318 files in other folders)
