[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
authors = ["Konstantin Vyatkin <tino@vtkn.io>"]
edition = "2024"
homepage = "https://github.com/tinovyatkin/serpen"
license = "MIT"
repository = "https://github.com/tinovyatkin/serpen"
description = "Python source bundler that produces a single .py file from multi-module projects"

[workspace.dependencies]
once_cell = "1.18"

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Python parsing
rustpython-parser = "0.4"
rustpython-unparser = { version = "0.2", features = ["transformer"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling and logging
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

# Graph and data structures
indexmap = "2.0"
petgraph = "0.8"

# Utilities
regex = "1.5"
walkdir = "2.3"

# Python bindings (optional)
pyo3 = "0.25"
pyo3-build-config = "0.25"

# Testing
insta = { version = "1.34", features = ["filters"] }
tempfile = "3.8"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)", "cfg(codspeed)"] }

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_continue = "allow" # An explicit continue can be more readable, especially if the alternative is an empty block.
unnecessary_debug_formatting = "allow" # too many instances, the display also doesn't quote the path which is often desired in logs where we use them the most often.
# Without the hashes we run into a `rustfmt` bug in some snapshot tests, see #13250
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
# nursery rules
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"

# https://github.com/rustwasm/wasm-bindgen/issues/3451#issuecomment-1562982835
[profile.dev]
opt-level = "s"

[profile.release]
lto = true
codegen-units = 1

# https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
