[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.5"
authors = ["Konstantin Vyatkin <tino@vtkn.io>"]
edition = "2024"
homepage = "https://github.com/tinovyatkin/serpen"
license = "MIT"
repository = "https://github.com/tinovyatkin/serpen"
description = "Python source bundler that produces a single .py file from multi-module projects"

[workspace.dependencies]
once_cell = "1.21.3"

# CLI and argument parsing
clap = { version = "4.5.39", features = ["derive"] }

# Python parsing - using git dependencies as ruff internals are not published to crates.io
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", rev = "0.11.12" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff/", rev = "0.11.12" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", rev = "0.11.12" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff/", rev = "0.11.12" }
ruff_python_trivia = { git = "https://github.com/astral-sh/ruff/", rev = "0.11.12" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", rev = "0.11.12" }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling and logging
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

# Graph and data structures
indexmap = "2.9.0"
petgraph = "0.8"

# Utilities
cow-utils = "0.1.3"
etcetera = "0.10"
regex = "1.11.1"
walkdir = "2.5.0"

# Python bindings (optional)
pyo3 = "0.25"
pyo3-build-config = "0.25"

# Testing
insta = { version = "1.43.1", features = ["filters"] }
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
tempfile = "3.20.0"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)", "cfg(codspeed)"] }

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_continue = "allow" # An explicit continue can be more readable, especially if the alternative is an empty block.
unnecessary_debug_formatting = "allow" # too many instances, the display also doesn't quote the path which is often desired in logs where we use them the most often.
# Without the hashes we run into a `rustfmt` bug in some snapshot tests, see #13250
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
# nursery rules
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"

# https://github.com/rustwasm/wasm-bindgen/issues/3451#issuecomment-1562982835
[profile.dev]
opt-level = "s"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
