[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "serpen"
version = "0.1.0"
description = "Python source bundler that produces a single .py file from multi-module projects"
authors = [{ name = "Konstantin Vyatkin", email = "tino@vtkn.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["bundler", "python", "deployment", "pyspark", "lambda"]

[project.urls]
Homepage = "https://github.com/tinovyatkin/serpen"
Repository = "https://github.com/tinovyatkin/serpen"
Documentation = "https://github.com/tinovyatkin/serpen#readme"
Issues = "https://github.com/tinovyatkin/serpen/issues"

[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = ["maturin"]

[tool.maturin]
bindings = "bin"
python-source = "python"
manifest-path = "crates/serpen/Cargo.toml"

[tool.uv]
link-mode = "symlink"
default-groups = ["test", "dev"]
