[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "serpen"
dynamic = ["version"]
description = "Python source bundler that produces a single .py file from multi-module projects"
authors = [{ name = "Konstantin Vyatkin", email = "tino@vtkn.io" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["bundler", "python", "deployment", "pyspark", "lambda"]

[project.urls]
Homepage = "https://github.com/tinovyatkin/serpen"
Repository = "https://github.com/tinovyatkin/serpen"
Documentation = "https://github.com/tinovyatkin/serpen#readme"
Issues = "https://github.com/tinovyatkin/serpen/issues"

[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = [
    "lefthook>=1.11.13",
    "maturin",
    "vale>=3.11.2.0",
    "yamlfix>=1.17.0",
    "yamllint>=1.37.1",
]

[tool.maturin]
bindings = "bin"
python-source = "python"
manifest-path = "crates/serpen/Cargo.toml"

[tool.uv]
link-mode = "symlink"
default-groups = ["test", "dev"]
