[package]
name = "serpen"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
once_cell = { workspace = true }
clap = { workspace = true }
rustpython-parser = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
petgraph = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }

# Binary target only - no library for Python bindings following Ruff's pattern
[[bin]]
name = "serpen"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
