[package]
name = "serpen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
rustpython-parser = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
unparser = { workspace = true }
walkdir = { workspace = true }

# Binary target only - no library for Python bindings following Ruff's pattern
[[bin]]
name = "serpen"
path = "src/main.rs"

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
