[package]
name = "unparser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A complete unparser for RustPython ASTs - customized for Serpen"

[features]
default = []
transformer = []

[dependencies]
# Use workspace dependencies for RustPython components
rustpython-ast = { workspace = true, features = ["rustpython-literal"] }
rustpython-literal = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
rustpython-ast = { workspace = true, features = ["fold", "unparse"] }
rustpython-parser = { workspace = true }
